# TudouClaw_new

./: .gitignore  DELEGATION_IMPLEMENTATION.md  DELEGATION_USAGE_EXAMPLES.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.txt  MIDDLE_EAST_GAME_MARKET_INSIGHT_2026.md  PARITY.md  README.md  deploy.sh  deploy_windows.ps1  requirements.txt  test_all.py  test_delegation.py  test_p0_p1_openspace.py  test_role_growth_path.py  verify_implementation.py
app/: ARCHITECTURE.md  __init__.py  __main__.py  abort_registry.py  active_thinking.py  agent.py  agent_event_capture.py  agent_execution.py  agent_growth.py  agent_llm.py  agent_server.py  agent_types.py  agent_worker.py  agent_worker_hooks.py  auth.py  branding.py  canvas_artifacts.py  canvas_executor.py  canvas_workflows.py  channel.py  chat_task.py  checkpoint.py  config.yaml.example  defaults.py  digest.py  enhancement.py  experience_library.py  i18n.py  inbox.py  intent_router.py  knowledge.py  llm.py  llm_providers.py  llm_router.py  llm_tier_routing.py  login_guard.py  meeting.py  middleware.py  paths.py  permissions.py  (+28 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: 2026-05-03-night-status.md  2026-05-04-rag-quality-assessment.md  PHASE2B_SYSTEM_PROMPT_BLOCKS.md  data-dir-config.md  multi-node-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_skills_catalog.py  cleanup_trash_kb.py  install.sh  migrate_agent_ownership.py  migrate_split_persona.py  prune_l3_facts.py
src/: __init__.py  (+3 more)
(+544 files in other folders)
